--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd --respawn --transpile-only simple-server.ts"
+    "dev:simple": "tsnd --respawn --transpile-only simple-server.ts",
+    "dev": "tsnd --respawn --transpile-only src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,7 @@
   },
   "dependencies": {
     "apollo-server": "^3.13.0",
-    "graphql": "^16.8.1",
+    "graphql": "15.3.0",
     "graphql-scalars": "^1.23.0",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "^1.1.1"
