--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/graphql-iso-date": "^3.4.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
   },
   "dependencies": {
     "apollo-server": "^3.13.0",
+    "class-validator": "^0.14.1",
     "graphql": "15.3.0",
-    "graphql-scalars": "^1.23.0",
+    "graphql-iso-date": "^3.6.1",
     "reflect-metadata": "^0.2.2",
     "type-graphql": "^1.1.1"
   }
